pkg/front_end/testcases/inference/circular_reference_via_closures.dart.strong.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/circular_reference_via_closures.dart:10:72: Error: Can't infer the type of 'y': circularity found during type inference.
// Specify the type explicitly.
// var /*@topType=invalid-type*/ /*@error=CantInferTypeDueToCircularity*/ y = /*@returnType=invalid-type*/ () =>
//                                                                        ^
//
// pkg/front_end/testcases/inference/circular_reference_via_closures.dart:8:72: Error: Can't infer the type of 'x': circularity found during type inference.
// Specify the type explicitly.
// var /*@topType=invalid-type*/ /*@error=CantInferTypeDueToCircularity*/ x = /*@returnType=invalid-type*/ () =>
//                                                                        ^
//
import self as self;

static field invalid-type x = (() → invalid-type => self::y) as{TypeError} invalid-type;
static field invalid-type y = (() → invalid-type => self::x) as{TypeError} invalid-type;
static method main() → dynamic {}
